--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-standard": "^2.0.1",
     "jest-cli": "^19.0.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.pick": "^4.4.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rogerbf/deep-project.git"
