--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deep-project",
   "version": "0.0.1",
-  "description": "",
+  "description": "extract properties from an object",
   "main": "index.js",
   "scripts": {
     "test": "jest --config .jest",
@@ -13,7 +13,13 @@
     "coverage": "jest --config .jest --coverage",
     "watch:coverage": "jest --config .jest --coverage --watch"
   },
-  "keywords": [],
+  "keywords": [
+    "pick",
+    "project",
+    "select",
+    "object",
+    "keymap"
+  ],
   "author": "rogerbf <roger@bergfalk.nu> (http://bergfalk.nu/)",
   "license": "MIT",
   "devDependencies": {
@@ -25,7 +31,7 @@
     "jest-cli": "^19.0.2"
   },
   "dependencies": {
-    "lodash.pick": "^4.4.0"
+    "lodash-pickdeep": "^1.0.2"
   },
   "repository": {
     "type": "git",
